--- a/habitat/templates/habitat/index.html
+++ b/habitat/templates/habitat/index.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 <div class="day-selector">
-    <button class="filter-button" type="button" data-id="5">Saturday</button>
+    <button class="filter-button day-select-active" type="button" data-id="5">Saturday</button>
     <button class="filter-button" type="button" data-id="6">Sunday</button>
 </div>
 <div class="schedule-card-body">
