--- a/habitat/templates/habitat/base.html
+++ b/habitat/templates/habitat/base.html
@@ -47,8 +47,8 @@
         <script type="text/javascript" src="{% static 'js/idbop.js' %}"></script>
         <section class="app-footer">
             <div class="navbar">
-                <a class="nav-item" href="/"><span class="material-symbols-outlined">music_note</span></a>
-                <a class="nav-item" href="/directions/"><span class="material-symbols-outlined">pin_drop</span></a>
+                <a class="nav-item" href="/habitat/"><span class="material-symbols-outlined">music_note</span></a>
+                <a class="nav-item" href="/habitat/directions/"><span class="material-symbols-outlined">pin_drop</span></a>
             </div>
         </section>
     </main>
